# Kolokwa_connect

./: .dockerignore  Dockerfile.mcp  Dockerfile.web  README.md  check_static_files.py  docker-compose.yml  manage.py  nginx.conf  render.yaml  requirements.txt  setup_static_files.py
Kolokwa_connect/: asgi.py  settings.py  urls.py  views.py  wsgi.py
dictionary/: admin.py  extract_koloqua_data.py  filters.py  forms.py  models.py  serializers.py  urls.py  views.py
dictionary/migrations/: 0001_initial.py  0002_koloquaentry_embedding_and_more.py
gamification/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
gamification/migrations/: 0001_initial.py  0002_userstreak_accepted_challenge_and_more.py  0003_userstreak_completed_challenge_and_more.py  0004_alter_pointtransaction_transaction_type.py
kolokwa/: main.py  pyproject.toml
kolokwa/src/kolokwa_mcp/: dictionary_server.py  production_config.py  run_dictionary_server.py  run_dictionary_stdio.py  run_translator_server.py  run_translator_stdio.py  startup_test.py  translation_server.py
nl_interact/: apps.py  serializers.py  urls.py  utils.py  views.py
static/: manifest.json
static/css/: style.css
staticfiles/: staticfiles.json
staticfiles/css/: style.9f2417610b30.css  style.min.1e30eee0e92d.css
templates/: about.html  base.html  index.html
templates/account/: edit_profile.html  leaderboard.html  login.html  profile.html  signup.html  user_contributions.html
users/: adapter.py  admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py  workos_views.py
(+14 files in other folders)
