[project]
name = "kolokwa"
version = "0.1.0"
description = "MCP servers for Kolokwa Connect dictionary and translation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.1.2",
    "httpx>=0.27.0",
    "django>=5.0.2",
    "djangorestframework>=3.15.0",
    "django-cors-headers>=4.3.1",
    "python-decouple>=3.8",
    "Pillow>=10.2.0",
    "django-filter>=24.1",
    "drf-spectacular>=0.27.1",
    "celery>=5.3.6",
    "redis>=5.0.1",
    "psycopg2-binary>=2.9.9",
    "dj-rest-auth>=5.0.0",
    "django-allauth>=0.57.0",
    "requests>=2.31.0",
    "djangorestframework-simplejwt>=5.3.0",
    "openai>=1.0.0",
    "anthropic>=0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kolokwa_mcp"]

[dependency-groups]
dev = []